--- a/appveyor.yml
+++ b/appveyor.yml
@@ -168,7 +168,7 @@ for:
         - image: Ubuntu1804
 
     install:
-    - sh: apt-get upgrade -y
+#   - sh: apt-get upgrade -y
     - sh: apt-get install -y git wget mono-devel qemu qemu-system qemu-system-x86
 
     before_build:
