--- a/appveyor.yml
+++ b/appveyor.yml
@@ -123,13 +123,13 @@ for:
     - sh: apt-get install -y git wget qemu qemu-system qemu-system-x86
 
     before_build:
-    - sh: mono "$(APPVEYOR_BUILD_FOLDER)/Tools/nuget/nuget.exe" restore -Verbosity quiet "$(APPVEYOR_BUILD_FOLDER)/Source/Mosa.sln"
+    - sh: mono $(APPVEYOR_BUILD_FOLDER)/Tools/nuget/nuget.exe restore -Verbosity quiet $(APPVEYOR_BUILD_FOLDER)/Source/Mosa.sln
 
     build: off
 
     build_script:
-    - sh: msbuild "$(APPVEYOR_BUILD_FOLDER)/Source/Mosa.sln"
+    - sh: msbuild $(APPVEYOR_BUILD_FOLDER)/Source/Mosa.sln
 
     test_script:
-    - sh: "$(APPVEYOR_BUILD_FOLDER)/bin/Mosa.Tool.Mosactl" "test"
-    - sh: "$(APPVEYOR_BUILD_FOLDER)/bin/Mosa.Tool.Mosactl" "unittest"
+    - sh: $(APPVEYOR_BUILD_FOLDER)/bin/Mosa.Tool.Mosactl test
+    - sh: $(APPVEYOR_BUILD_FOLDER)/bin/Mosa.Tool.Mosactl unittest
