--- a/appveyor.yml
+++ b/appveyor.yml
@@ -124,13 +124,13 @@ for:
     - sh: sudo apt-get install -y git wget qemu qemu-system qemu-system-x86
 
     before_build:
-    - sh: mono $(APPVEYOR_BUILD_FOLDER)/Tools/nuget/nuget.exe restore -Verbosity quiet $(APPVEYOR_BUILD_FOLDER)/Source/Mosa.sln
+    - sh: mono $APPVEYOR_BUILD_FOLDER/Tools/nuget/nuget.exe restore -Verbosity quiet $APPVEYOR_BUILD_FOLDER/Source/Mosa.sln
 
     build: off
 
     build_script:
-    - sh: msbuild $(APPVEYOR_BUILD_FOLDER)/Source/Mosa.sln
+    - sh: msbuild $APPVEYOR_BUILD_FOLDER/Source/Mosa.sln
 
     test_script:
-    - sh: $(APPVEYOR_BUILD_FOLDER)/bin/Mosa.Tool.Mosactl test
-    - sh: $(APPVEYOR_BUILD_FOLDER)/bin/Mosa.Tool.Mosactl unittest
+    - sh: $APPVEYOR_BUILD_FOLDER/bin/Mosa.Tool.Mosactl test
+    - sh: $APPVEYOR_BUILD_FOLDER/bin/Mosa.Tool.Mosactl unittest
