--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,6 @@ platform: Any CPU
 image:
 - Visual Studio 2019
 - Ubuntu1804
-- Visual Studio 2017
 
 shallow_clone: true
 
@@ -19,14 +18,14 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 
-#dotnet_csproj:
-#  patch: true
-#  file: 'Source\*\*.csproj'
-#  version: '{version}'
-#  package_version: '{version}'
-#  assembly_version: '{version}'
-#  file_version: '{version}'
-#  informational_version: '{version}'
+dotnet_csproj:
+  patch: true
+  file: 'Source\*\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 
 for:
 
@@ -41,7 +40,7 @@ for:
     - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
-    - nuget restore -Verbosity quiet Source/Mosa.sln
+    - cmd: nuget restore -Verbosity quiet Source/Mosa.sln
 
     build:
       verbosity: minimal
@@ -83,7 +82,7 @@ for:
         tag: v$(APPVEYOR_BUILD_VERSION)-dev
         description: 'Development Version - v$(APPVEYOR_BUILD_VERSION)'
         auth_token:
-          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
+          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07
         artifact: installer
         draft: false
         prerelease: true
@@ -96,7 +95,7 @@ for:
         release: MOSA Project v$(APPVEYOR_BUILD_VERSION)
         description: 'Stable Version - v$(APPVEYOR_BUILD_VERSION)'
         auth_token:
-          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
+          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07
         artifact: installer
         draft: false
         prerelease: false
@@ -105,61 +104,14 @@ for:
           branch: stable
 
       - provider: NuGet
-        server:                  
+        server:
         api_key:
           secure: aTaYVizieVZLoxu3Cys6R6lAk3OvG5vtLp3ly4MBz6kwEr9I6HJfhFPNjeLpEa+Y
         skip_symbols: false
-        symbol_server:           
+        symbol_server:
         artifact: /.*\.nupkg/
         on:
           branch: stable
-
-# Windows Build - Visual Studio 2017:
-  -
-    matrix:
-      only:
-        - image: Visual Studio 2017
-
-    install:
-    - cmd: choco install InnoSetup
-    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
-
-    before_build:
-    - nuget restore -Verbosity quiet Source/Mosa.sln
-
-    build:
-      verbosity: minimal
-      parallel: true
-      project: Source/Mosa.sln
-      publish_nuget: true
-
-    after_build:
-    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-#   - ps: ./mosactl.ps1 unittest
-#   - ps: ./mosactl.ps1 test
-
-    build_script:
-
-    test_script:
-#    - cmd: ./mosactl.ps1 test
-
-    after_test:
-
-    nuget:
-      project_feed: true
-
-    test: off
-
-    assembly_info:
-      patch: true
-      file: AssemblyInfo.*
-      assembly_version: "{version}"
-      assembly_file_version: "{version}"
-      assembly_informational_version: "{version}"
-
-    artifacts:
-    - path: bin\MOSA-Installer-*.exe
-    - path: Mosa.*.nupkg
 
 # Linux Build:
   -
@@ -168,13 +120,17 @@ for:
         - image: Ubuntu1804
 
     install:
-    - sh: docker pull mosaproject/mosa-docker-integration || docker pull mosaproject/mosa-docker-integration # with retry, if failed
+    - sh: sudo apt-get upgrade -y
+    - sh: sudo apt-get install -y git wget qemu qemu-system qemu-system-x86
 
     before_build:
-    - echo test
+    - sh: mono $APPVEYOR_BUILD_FOLDER/Tools/nuget/nuget.exe restore -Verbosity quiet $APPVEYOR_BUILD_FOLDER/Source/Mosa.LinuxCI.sln
 
     build: off
 
     build_script:
-    - sh: echo UID "$UID"
-    - sh: docker run --name MOSA -v $APPVEYOR_BUILD_FOLDER:/home/appveyor mosaproject/mosa-docker-integration /bin/bash -c "useradd -m -u $UID appveyor && su appveyor -- -c 'cd /home/appveyor && chmod +x mosactl && ./mosactl test && ./mosactl unittest'"
+    - sh: msbuild $APPVEYOR_BUILD_FOLDER/Source/Mosa.LinuxCI.sln
+
+    test_script:
+    - sh: $APPVEYOR_BUILD_FOLDER/bin/Mosa.Tool.Mosactl test
+    - sh: $APPVEYOR_BUILD_FOLDER/bin/Mosa.Tool.Mosactl unittest
