--- a/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
+++ b/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
@@ -1,128 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4DBD4C50-BEC5-48D9-B471-9FB0A7F69999}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.DeviceDriver</AssemblyName>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>
-    </AppDesignerFolder>
-    <RootNamespace>Mosa.DeviceDriver</RootNamespace>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
-    <TargetFrameworkProfile />
-    <NoStdLib>true</NoStdLib>
+    <TargetFramework>net472</TargetFramework>
+    <DebugType>full</DebugType>
+    <LangVersion>8.0</LangVersion>
+    <OutputPath>..\..\bin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>full</DebugType>
-    <NoWarn>1685,219,414</NoWarn>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile />
     <CodeAnalysisRuleSet>..\Common.ruleset</CodeAnalysisRuleSet>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
     <DocumentationFile>..\..\bin\Mosa.DeviceDriver.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>2</WarningLevel>
-    <NoWarn>1685,219,414</NoWarn>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj">
-      <Project>{6509477A-7360-4937-A1B9-26FED0A75CDA}</Project>
-      <Name>Mosa.DeviceSystem</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj">
-      <Project>{631bc4f3-e2d8-4319-814c-13904caa17ce}</Project>
-      <Name>Mosa.Korlib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj">
-      <Project>{77961864-DB33-4189-804F-D774022C96E2}</Project>
-      <Name>Mosa.Runtime</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj" />
+    <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
+    <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PCI\Intel\Intel440FX.cs" />
-    <Compile Include="PCI\Intel\Intel4SeriesChipsetDRAMController.cs" />
-    <Compile Include="PCI\Intel\Intel4SeriesChipsetIntegratedGraphicsController.cs" />
-    <Compile Include="PCI\Intel\Intel4SeriesChipsetIntegratedGraphicsController2E13.cs" />
-    <Compile Include="PCI\Intel\Intel4SeriesChipsetPCIExpressRootPort.cs" />
-    <Compile Include="PCI\Intel\Intel82540EM.cs" />
-    <Compile Include="PCI\Intel\Intel82541EI.cs" />
-    <Compile Include="PCI\Intel\IntelPIIX3.cs" />
-    <Compile Include="PCI\Intel\PCIIDEInterface.cs" />
-    <Compile Include="PCI\Intel\IntelPIIX4.cs" />
-    <Compile Include="PCI\Intel\QuarkSoC\IntelGPIOController.cs" />
-    <Compile Include="PCI\Intel\QuarkSoC\IntelHSUART.cs" />
-    <Compile Include="PCI\VideoCard\GenericVGA.cs" />
-    <Compile Include="PCI\VideoCard\VGAText.cs" />
-    <Compile Include="X86System.cs" />
-    <Compile Include="ISA\ISABus.cs" />
-    <Compile Include="ISA\CMOS.cs" />
-    <Compile Include="ISA\IDEController.cs" />
-    <Compile Include="ISA\PCIController.cs" />
-    <Compile Include="ISA\StandardKeyboard.cs" />
-    <Compile Include="ScanCodeMap\HU.cs" />
-    <Compile Include="Setup.cs" />
-    <Compile Include="ISA\PIC.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="PCI\VMware\VMwareSVGAII.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ScanCodeMap\US.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Remove="ISA\PIT.cs" />
+    <Compile Remove="ISA\Serial.cs" />
+    <Compile Remove="ISA\VGAText.cs" />
+    <Compile Remove="PCI\Intel4SeriesChipsetDRAMController.cs" />
+    <Compile Remove="PCI\AMD\AMDPCNetII.cs" />
+    <Compile Remove="PCI\S3\S3Trio64V2.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PCI\MassStorage\" />
-    <Folder Include="PCI\Network\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
