--- a/Source/Mosa.FileSystem/Mosa.FileSystem.csproj
+++ b/Source/Mosa.FileSystem/Mosa.FileSystem.csproj
@@ -1,165 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D89972FD-A930-4D0C-B393-1895E78FAFAB}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.FileSystem</AssemblyName>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>
-    </AppDesignerFolder>
-    <RootNamespace>Mosa.FileSystem</RootNamespace>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
-    <TargetFrameworkProfile />
+    <TargetFramework>net472</TargetFramework>
+    <DebugType>full</DebugType>
+    <LangVersion>8.0</LangVersion>
+    <OutputPath>..\..\bin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>full</DebugType>
+    <DocumentationFile />
     <NoWarn>0219,0414</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
     <DocumentationFile>..\..\bin\Mosa.FileSystem.xml</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>2</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj">
-      <Project>{6509477A-7360-4937-A1B9-26FED0A75CDA}</Project>
-      <Name>Mosa.DeviceSystem</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="FAT\FatFileAttributes.cs" />
-    <Compile Include="FAT\FatType.cs" />
-    <Compile Include="FAT\Find\WithName.cs" />
-    <Compile Include="FAT\Find\Volume.cs" />
-    <Compile Include="FAT\Find\ByCluster.cs" />
-    <Compile Include="FAT\FatFileLocation.cs" />
-    <Compile Include="FAT\Find\Empty.cs" />
-    <Compile Include="GenericFileSystem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="IFileSystemDevice.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="GenericFileSystemSettings.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\FatFileSystem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\FatFileSystemDevice.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\FatFileStream.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\FatSettings.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\Vfs\VfsDirectory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\Vfs\VfsFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="FAT\Vfs\VfsFileSystem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\AccessCheck.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\AccessMode.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\DirectoryEntry.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\DirectoryNode.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\FileSystemFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\IDirectory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\IFileSystem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\IFileSystemService.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\IVfsNode.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\NodeBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\PathResolutionFlags.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\PathResolver.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\PathSplitter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\SymbolicLinkNode.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\VfsNodeType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VFS\VirtualFileSystem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
