--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <ProjectGuid>{DFD831EA-79D8-49FC-8923-3AFFDA1283B9}</ProjectGuid>
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyTitle>Mosa.Tool.GDBDebugger</AssemblyTitle>
